--- a/Comfy/assets/_navbar.scss
+++ b/Comfy/assets/_navbar.scss
@@ -23,9 +23,13 @@
     box-shadow: none !important;
   }
 
+
   // Cover art expanded
   .main-coverSlotExpanded-container .cover-art .cover-art-image {
     border-radius: 0 !important;
+  }
+  .main-yourLibraryX-libraryIsExpanded.main-yourLibraryX-libraryIsCollapsed {
+    padding-bottom: 0 !important;
   }
 
   // Scrollbar
